# ros_template_pkg

./: CMakeLists.txt  package.xml  readme.md
include/: human_pose_estimator.h  wavehands_stop.h
launch/: wavehands_stop.launch
src/: wavehands_stop.cc  wavehands_stop_node.cc
